# everythingblack

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/everythingblack/: implementation_linux_x11.h  implementation_windows.h
src/: main.c
src/implementations/: implementation_linux_x11.c  implementation_windows.c
